sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: value etat is not a member of object Boolean
    Boolean etat=false;
            ^AlgBubbleSort1:8: error: not found: value etat
        etat=true;
        ^AlgBubbleSort1:11: error: not found: value etat
  }while(etat==false);
         ^